--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wc-markdown",
+  "name": "webcomponent-markdown",
   "version": "0.0.1",
   "description": "Web Component for rendering Markdown, using Remark",
   "type": "module",
