Refactor to use remark-vdom to pass Remark result direct to Atomico.
Initial testing in unit testing shows about a 10 ms difference in rendering without the rehype stringify, and the component seems anecdotally more performant in Storybook.

--- a/package.json
+++ b/package.json
@@ -73,9 +73,8 @@
   },
   "dependencies": {
     "atomico": "^1.33.0",
-    "rehype-stringify": "^9.0.2",
     "remark-parse": "^10.0.0",
-    "remark-rehype": "^10.0.0",
+    "remark-vdom": "^11.0.0",
     "unified": "^10.1.0"
   }
 }
