Don't run compiled unit test files

--- a/package.json
+++ b/package.json
@@ -49,6 +49,10 @@
     ],
     "setupFiles": [
       "./setupJest.cjs"
+    ],
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/dist/"
     ]
   },
   "devDependencies": {
