--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -25,14 +25,10 @@
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen",
       "disableOptimisticBPs": true,
-      "program": "${workspaceFolder}/node",
+      "program": "${workspaceFolder}/node_modules/jest/bin/jest.js",
       "cwd": "${workspaceFolder}",
-      "args": [
-        "--experimental-vm-modules",
-        "node_modules/jest/bin/jest.js",
-        "--runInBand",
-        "--watchAll=false"
-      ]
+      "runtimeArgs": ["--experimental-vm-modules"],
+      "args": ["--runInBand", "--watchAll=false"]
     }
   ]
 }
