--- a/package.json
+++ b/package.json
@@ -79,8 +79,9 @@
   "dependencies": {
     "@atomico/hooks": "^3.20.2",
     "atomico": "^1.34.0",
+    "hast-to-hyperscript": "^10.0.1",
     "remark-parse": "^10.0.0",
-    "remark-vdom": "^11.0.0",
+    "remark-rehype": "^10.0.1",
     "strip-indent": "^4.0.0",
     "unified": "^10.1.0"
   }
