--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
   "version": "0.2.1",
   "description": "Web Component for rendering Markdown, using Remark",
   "type": "module",
-  "main": "./dist/index.js",
+  "source": "src/index.tsx",
+  "main": "./dist/index.cjs",
   "module": "./dist/index.js",
+  "unpkg": "./dist/index.umd.js",
   "exports": {
-    "import": "./dist/index.js"
+    "import": "./dist/index.js",
+    "require": "./dist/index.cjs",
+    "default": "./dist/index.js"
   },
   "scripts": {
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
-    "build": "tsc",
+    "build": "microbundle",
+    "dev": "microbundle watch",
     "prepack": "npm run build",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
@@ -69,6 +74,7 @@
     "jest": "27.4.7",
     "jest-fetch-mock": "3.0.3",
     "jest-serializer-html": "7.1.0",
+    "microbundle": "^0.14.2",
     "node-fetch": "3.1.0",
     "storybook-builder-vite": "0.1.13",
     "ts-jest": "27.1.2",
