--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "webcomponent-markdown",
-  "version": "0.2.3",
+  "version": "0.2.5",
   "description": "Web Component for rendering Markdown, using Remark",
   "type": "module",
   "source": "src/index.tsx",
-  "module": "./dist/index.js",
-  "unpkg": "./dist/index.umd.js",
+  "module": "./dist/webcomponent-markdown.js",
+  "unpkg": "./dist/webcomponent-markdown.umd.js",
   "exports": {
-    "import": "./dist/index.js",
-    "default": "./dist/index.js"
+    "import": "./dist/webcomponent-markdown.js",
+    "default": "./dist/webcomponent-markdown.js"
   },
   "scripts": {
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
