--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Run tests
         run: npm test -- --ci
       - name: Build storybook
-        run: npm run build-storybook
+        run: npm run storybook:build
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2.1.0
         with:
